fixing typo on viz page

--- a/visualizations.qmd
+++ b/visualizations.qmd
@@ -8,4 +8,4 @@ listing:
   # fields: [image, title, date] this line pushes the subtitle to the specific page and off of the visualizations landing page
 ---
 
-I'll be migrating viz portfolio here soon!
+I'll be migrating my full viz portfolio here soon (Nov 2024)!
