--- a/visualizations/2020-10-29-tt-wk44-2020/index.qmd
+++ b/visualizations/2020-10-29-tt-wk44-2020/index.qmd
@@ -1,13 +1,13 @@
 ---
 title: "Visualizing the expansion of wind turbine projects in Canada over time"
-# description: "Tidy Tuesday: Week 38, 2019"
+description: "Showing the major expansion in wind projects in Canada in the 2010s"
 author:
   - name: Mickey Rafa
     url: https://mrafa3.github.io/
 date: 10-29-2020
 categories: [R, "#TidyTuesday", line-chart] # self-defined categories
 image: "tt_2020_44_thumbnail.png"
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 
 format:
   html:
@@ -104,15 +104,15 @@ turbines_cum_sum <- turbines %>%
 
 ```{r my_theme, include=TRUE}
 my_theme <- theme(
-  text = element_text(family = 'Lato', size=12), 
+  text = element_text(family = 'Lato', size=18), 
   axis.ticks = element_blank(), 
-  plot.background = element_blank(),
+  plot.background = element_rect(color='white'),
+  # plot.background = element_blank(),
   panel.background =  element_blank(), 
-  legend.background = element_blank(), 
-  panel.grid.major = element_line(colour = "grey90", linewidth = 0.5),
-  panel.grid.minor = element_line(colour = "grey93", linewidth = 0.5),
-  panel.border = element_blank(), 
-  legend.title=element_blank())
+  legend.position = 'none',
+  panel.grid.major = element_line(colour = "grey90", linewidth = 0.25),
+  panel.grid.minor = element_line(colour = "grey93", linewidth = 0.25),
+  panel.border = element_blank())
 
 prov_cols <- c('Ontario' = 'steelblue4',
                'Quebec' = 'springgreen4',
@@ -135,28 +135,28 @@ running_ttl_viz <- turbines_cum_sum %>%
   geom_line(aes(group=province_territory,
                 color=highlight_prov),
                 linewidth=1) + 
-  geom_text(data=. %>% slice_max(year) %>% filter(province_territory %in% c('Ontario', 'Quebec', 'Alberta')),
+  geom_text(data=. %>% 
+              slice_max(year) %>% 
+              filter(province_territory %in% c('Ontario', 'Quebec', 'Alberta')),
             aes(x=year + 1.5,
                 label=province_territory,
-                color=highlight_prov), fontface='bold', size=5) + 
+                color=highlight_prov), fontface='bold', size=10) + 
   labs(x='',
        y='**Running total of<br>new turbines**',
        title='Running total of wind turbines in Canadian provinces over time',
-       subtitle=glue("<span style='color:steelblue4'>**Ontario**</span>, <span style='color:springgreen4'>**Quebec**</span>, and <span style='color:gold3'>**Alberta**</span>  lead the way for Canadian provinces.<br>This graphic is measuring the count of turbines commissioned by provinces<br>over time and does not consider the generating capacity of each wind turbine<br>or their decay over time. The gray lines represent other Canadian provinces<br>that have far fewer turbines."),
-       caption='Tidy Tuesday Week 44 (2020)<br>**Source**: Government of Canada<br>Created by @mickey_rafa') + 
+       subtitle=glue("<span style='color:steelblue4'>**Ontario**</span>, <span style='color:springgreen4'>**Quebec**</span>, and <span style='color:gold3'>**Alberta**</span>  lead the way for Canadian provinces. This graphic is measuring the count of turbines<br>commissioned by provinces over time and does not consider the generating capacity of each wind turbine or their<br>decay over time. The gray lines represent other Canadian provinces that have far fewer turbines."),
+       caption='<br>Tidy Tuesday Week 44 (2020)<br>**Source**: Government of Canada<br>Created by @mickey_rafa') + 
   scale_y_continuous(labels = comma) + 
   scale_color_manual(values = prov_cols) + 
-  # scale_size_manual(values = prov_size) + 
   my_theme + 
-  theme(legend.position = 'none',
-        axis.title.y = element_text(angle = 0),
-        plot.title = element_text(size=rel(1.6), face='bold'),
-        plot.subtitle = element_textbox(size=rel(1.3)),
+  theme(axis.title.y = element_text(size=rel(1.2), 
+                                    angle = 0, margin = margin(b=5), lineheight = .5),
+        plot.title = element_markdown(size=rel(2.6), face='bold'),
+        plot.subtitle = element_textbox(size=rel(1.4), lineheight = .5),
         axis.title = element_textbox(size=rel(1.3)),
-        axis.text = element_text(size=rel(1.3)),
-        plot.caption = element_textbox())
+        axis.text = element_text(size=rel(1.5)),
+        plot.caption = element_textbox(size=rel(1.3), margin = margin(b=5), lineheight = .5))
 ```
-
 
 # 7. Save 
 
@@ -165,7 +165,7 @@ running_ttl_viz <- turbines_cum_sum %>%
 ggsave(
   filename = glue("tt_{tt_year}_{tt_week}.png"),
   plot = running_ttl_viz,
-  width = 10, height = 6, units = "in", dpi = 320
+  width = 7.5, height = 5, units = "in", dpi = 300
 )
 
 # make thumbnail for page
