--- a/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
+++ b/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
@@ -21,11 +21,6 @@ title-block-banner: "#f0f3f5"
 title-block-banner-color: "black"
 ---
 
-# Introduction
-
-## Purpose
-
-## Setup
 
 ```{r setup, include=TRUE, warning=FALSE, message=FALSE}
 #| echo=FALSE
@@ -210,6 +205,7 @@ dropback_pbp_08_24 <- load_pbp(seasons = c(2008:2024)) %>%
 ```
 
 ```{r rodgers_gt, include=TRUE}
+#| fig.cap="Mean centering is a way to contextualize EPA relative to league-wide performance. Values close to zero indicate that performance in that category is near the league average; strong positive values indicate categories where Rodgers led the league in that category in that season."
 dropback_pbp_08_24 %>% 
   filter(passer == 'A.Rodgers',
          season != 2023) %>% 
@@ -248,7 +244,7 @@ dropback_pbp_08_24 %>%
   tab_source_note(source_note = md("**Source**: {nflverse}<br>Minimum 150 snaps in a season for QBs to qualify<br>Excluding 2023 as injury-shortened season")) %>% 
   tab_style(
     style = list(
-      cell_fill(color = "lightgray"),
+      cell_fill(color = "#FFB612"),
       cell_text(weight = "bold")
     ),
     locations = cells_body(
@@ -267,3 +263,83 @@ dropback_pbp_08_24 %>%
 ```
 
 
+So what is clearly *not* working this year? Well, lots of things -- the Jets are a mess. But throughout Rodgers' career, two things stand out:
+
+*  **Air EPA** was a strength of his game. He could push the ball down the field and add value to his team by completing passes that improve his team's expected points. Only in 2013 and 2017 -- both injury-shortened seasons -- did Rodgers post air EPA numbers below the league average. In 2024, his offense is more reliant on yards after the catch than in most of his career.
+*  Rodgers has always posted above average EPA from **scrambles**, and this is the first season where that doesn't hold true. Whether it's the injury or just a reluctance to run, Rodgers is simply more stationary and less effective at scrambling at this stage in his career.
+
+
+# "Passing is down league-wide..." 
+
+...or is it?
+
+Early in the season, there was a lot of discussion about how passing was down across the league. Defenses were deploying more cover 2 shell looks in an attempt to "keep a lid" on offenses.
+
+::: column-margin
+Like, do we think OCs just forgot how to attack 2-high coverages?
+:::
+
+What we're seeing is a "higher floor, lower cieling" league as far as passing goes. **Only two teams in 2024 average less than 200 yards passing, while no teams average above 300.**
+
+Note: I would love to do some analysis on defensive looks and give a more critical evaluation of this theme, but coverages (and personnel groupings) don't seem to be available in public NFL sources.
+
+::: column-margin
+Maybe I'll subscribe to an NFL data service some day and revisit this!
+:::
+
+```{r season_passing_league, fig.width=9}
+player_stats_99_24 %>% 
+  filter(season_type == 'REG') %>% 
+  group_by(season, week, recent_team) %>% 
+  summarise(ttl_passing_yards = sum(passing_yards, na.rm = TRUE),
+            .groups = 'drop') %>% 
+  group_by(season, recent_team) %>%
+  summarise(passing_yards_per_game = mean(ttl_passing_yards, na.rm = TRUE),
+            .groups = 'drop') %>% 
+  ggplot(.,
+         aes(x=passing_yards_per_game,
+             y=season)) + 
+  geom_jitter(width=0, height=.1, alpha=.4) + 
+  geom_segment(data = . %>% 
+                 group_by(season) %>% 
+                 summarise(mean_yards = mean(passing_yards_per_game)),
+               aes(x = mean_yards, xend = mean_yards,
+                   y = season - 0.6, yend = season + 0.6),
+               color = "red", linetype = "dashed", linewidth = 1.2) +
+  labs(title = 'Distribution of passing yards per game on a seasonal basis (1999-2024)',
+       subtitle = "Each dot represents a team's average total passing from a season<br>Red lines mark the league-wide average for a season",
+       y='Season',
+       x='Average pass yards per game',
+       caption = '**Source**: {nflverse}') + 
+  scale_y_continuous(breaks = scales::pretty_breaks()) + 
+  scale_x_continuous(breaks = scales::pretty_breaks()) + 
+  theme_nfl_analytics() + 
+  theme(axis.title.y = element_text(angle = 0))
+```
+
+# Offensive EPA: rush vs. pass (Lions spotlight?)
+
+```{r rush_pass_epa, include=TRUE, fig.width=9}
+pbp_2024 %>% 
+  filter(play_type %in% c('run', 'pass')) %>% 
+  group_by(posteam, play_type) %>% 
+  summarise(epa_per_play = mean(epa, na.rm = TRUE),
+            .groups = 'drop') %>% 
+  pivot_wider(names_from = play_type, values_from = epa_per_play) %>% 
+  ggplot(.,
+         aes(x=run,
+             y=pass)) + 
+  geom_mean_lines(aes(x0=0,
+                      y0=0),
+                  color='black', linewidth=.8, linetype='dashed') + 
+  geom_nfl_logos(aes(team_abbr = posteam), width = 0.09, alpha = 0.75) +
+  scale_y_continuous(breaks = scales::pretty_breaks()) + 
+  scale_x_continuous(breaks = scales::pretty_breaks()) + 
+  labs(
+    title = '**Expected Points Added per Play**: Rush Offense vs. Pass Offense',
+    subtitle = glue::glue('2024 season, through Week {max_week_param}'),
+    x = "Rush EPA/play",
+    y = "Pass EPA/play"
+    ) +
+  theme_nfl_analytics()
+```
